feat: defined varibles in sass

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,18 @@
 header {
   background: lightblue;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+header button {
+  background: #b65599;
+}
+
+.contact button {
+  background: #b65599;
 }
 /*# sourceMappingURL=style.css.map */
