--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,15 @@
+$primary-btn: rgb(182, 85, 153);
+
 header{
     background: lightblue;
+    display: flex;
+    justify-content: center;
+}
+
+header button {
+    background: $primary-btn;
+}
+
+.contact button {
+    background: $primary-btn;
 }
