--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,6 +1,14 @@
-
+@mixin flexCenter($direction) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: $direction
+}
 header{
+    @include flexCenter(row);
+    height: 100vh;
     background: lightblue;
+    align-items: center;
     display: flex;
     justify-content: center;
 }
