feat: implemented @extend

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,8 @@
 
 
 .contact  {
-    @include flexCenter(column)
+    // @include flexCenter(column);
+    @extend header;
+    background-color: pink;
 
   }
