--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-header {
+header, .contact {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -20,18 +20,6 @@ header {
 }
 
 .contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  background-color: pink;
 }
 /*# sourceMappingURL=style.css.map */
